[project]
name = "py-ml-pt-unet-binary-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "argparse>=1.4.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pillow>=12.0.0",
    "pyside6>=6.10.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "git-changelog>=2.6.3",
]

[tool.git-changelog]
bump = "auto"
convention = "conventional"
in-place = false
filter-commits = ""
marker-line = "<!-- insertion marker for GitHub -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
provider = "github"
repository = "."
sections = ["feat", "fix", "chore", "docs", "perf", "build", "refactor", "test", "deps"]
template = "angular"
version-regex = "^## \\[(?P<version>v?[^\\]]+)"
versioning = "semver"
zerover = false
